# WhisperBoard

./: .gitignore  README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/helium314/keyboard/latin/: InputAttributes.java  LatinIME.java
app/src/main/java/helium314/keyboard/latin/settings/: Defaults.kt  Settings.java
app/src/main/java/helium314/keyboard/latin/suggestions/: SuggestionStripView.kt
app/src/main/java/helium314/keyboard/latin/whisper/: AudioRecorder.kt  DeepgramClient.kt  WhisperManager.kt  WhisperModelManager.kt
app/src/main/java/helium314/keyboard/settings/: SettingsContainer.kt  SettingsNavHost.kt
app/src/main/java/helium314/keyboard/settings/screens/: MainSettingsScreen.kt  WhisperScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_settings_whisper.xml
app/src/main/res/drawable-v24/: ic_launcher_background.xml
app/src/main/res/values/: donottranslate.xml  strings.xml
app/src/main/res/values-fr/: strings.xml
whisperlib/: build.gradle.kts
whisperlib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
whisperlib/src/main/jni/whisper/: CMakeLists.txt  jni.c
